Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -468,7 +468,7 @@ Error: no DISPLAY environment variable specified
 1. Войдите в систему как пользователь `sonya` на своем компьютере и выполните следующие задачи SSH на удаленном сервере `halof`: 
 * Выполните команду для вывода списка содержимого `~/.ssh` от имени пользователя `serena` на удаленном хосте; затем вернитесь к своему локальному терминалу. 
 ```console
-ssh serena@halof cat ~/.ssh/
+ssh serena@halof ls .ssh
 ```
 * Войдите в систему как пользователь `serena` на удаленном хосте. 
 ```console
@@ -476,37 +476,38 @@ ssh serena@halof
 ```
 * Войдите в систему как пользователь `sonya` на удаленном хосте. 
 ```console
-ssh sonya@halof
+ssh halof
 ```
 * Удалите все ключи, принадлежащие `halof`, из вашего локального файла `~/.ssh/known_hosts`. 
 ```console
 ssh-keygen - R halof
 ```
-* На вашем клиентском компьютере создайте пару ключей `ecdsa` из 256 бит. 
+* На вашем клиентском компьютере создайте пару ключей `ecdsa` размером в 256 бит. 
 ```console
-
+ssh-keygen -t ecdsa -b 256
 ```
-* На клиентском компьютере создайте пару ключей `ed25519` из 256 бит. 
+* На клиентском компьютере создайте пару ключей `ed25519` размером в 256 бит. 
 ```console
-
+ssh-keygen -t ed25519
 ```
 
-2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью агента аутентификации SSH: 
-* На клиенте запустите новую оболочку Bash для агента аутентификации с помощью `ssh-agent /bin/bash`. 
+2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью *агента аутентификации SSH*: 
+* На клиенте запустите новую оболочку Bash для *агента аутентификации* с помощью `ssh-agent /bin/bash`. 
 * На клиенте создайте пару ключей с помощью `ssh-keygen`. 
 * На клиенте добавьте свой закрытый ключ в безопасную область памяти с помощью `ssh-add`. 
 * Добавьте открытый ключ своего клиента в файл `~/.ssh/authorized_keys` пользователя, под которым вы хотите войти, на удаленном хосте. 
 * Если он еще не существует, создайте `~/.ssh` для пользователя, которому вы хотите войти в систему как на сервере. 
 * Подключитесь к удаленному серверу.  
+
 Правильный порядок:  
 
-| Шаг 1: |  | 
+| Шаг 1: | На клиенте создайте пару ключей с помощью `ssh-keygen`. | 
 |:-------|:-|
-| Шаг 2: |  | 
-| Шаг 3: |  |
-| Шаг 4: |  |
-| Шаг 5: |  | 
-| Шаг 6: |  |
+| Шаг 2: | Если он еще не существует, создайте `~/.ssh` для пользователя, которому вы хотите войти в систему как на сервере. | 
+| Шаг 3: | Добавьте открытый ключ своего клиента в файл `~/.ssh/authorized_keys` пользователя, под которым вы хотите войти, на удаленном хосте. |
+| Шаг 4: | На клиенте запустите новую оболочку Bash для *агента аутентификации* с помощью `ssh-agent /bin/bash`. |
+| Шаг 5: | На клиенте добавьте свой закрытый ключ в безопасную область памяти с помощью `ssh-add`.  | 
+| Шаг 6: | Подключитесь к удаленному серверу. |
 
 3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей:  
  
