Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -465,7 +465,7 @@ Error: no DISPLAY environment variable specified
 
 ## Ответы на упражнения для закрепления
 
-1. Войдите в систему как пользователь `sonya` на своем компьютере и выполните следующие задачи SSH на удаленном сервере `halof`: 
+**1. Войдите в систему как пользователь `sonya` на своем компьютере и выполните следующие задачи SSH на удаленном сервере `halof`:** 
 * Выполните команду для вывода списка содержимого `~/.ssh` от имени пользователя `serena` на удаленном хосте; затем вернитесь к своему локальному терминалу. 
 ```console
 ssh serena@halof ls .ssh
@@ -491,7 +491,7 @@ ssh-keygen -t ecdsa -b 256
 ssh-keygen -t ed25519
 ```
 
-2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью *агента аутентификации SSH*: 
+**2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью *агента аутентификации SSH*:**   
 * На клиенте запустите новую оболочку Bash для *агента аутентификации* с помощью `ssh-agent /bin/bash`. 
 * На клиенте создайте пару ключей с помощью `ssh-keygen`. 
 * На клиенте добавьте свой закрытый ключ в безопасную область памяти с помощью `ssh-add`. 
@@ -509,23 +509,32 @@ ssh-keygen -t ed25519
 | Шаг 5: | На клиенте добавьте свой закрытый ключ в безопасную область памяти с помощью `ssh-add`.  | 
 | Шаг 6: | Подключитесь к удаленному серверу. |
 
-3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей:  
+**3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей:**  
  
 | Тип туннеля | Параметр | Директива |
 |:------------|:---------|:----------|
-| Локальный   |          |           | 
-| Удаленный или обратный ||          | 
-| X           |          |           | 
+| Локальный   | `-L`     | `AllowTcpForwarding` | 
+| Удаленный или обратный |`-R`| `GatewayPorts`  | 
+| X           | `-X`     | `X11Forwarding`      | 
 
-4. Предположим, вы набираете команду `ssh -L 8888: localhost: 80 -Nf ina@halof` в терминал вашего клиентского компьютера. По-прежнему на клиентской машине вы указываете браузеру `http://localhost:8888`. Что вы получите?
+**4. Предположим, вы набираете команду `ssh -L 8888: localhost: 80 -Nf ina@halof` в терминал вашего клиентского компьютера. По-прежнему на клиентской машине вы указываете браузеру `http://localhost:8888`. Что вы получите?**
+Домашняя страница веб-сервера `halof`, как `localhost`, понимается с точки зрения сервера.
 
 
 ## Ответы на упражнения для размышления
 
-1. Относительно директив безопасности SSH: 
-* Какая директива используется в `/etc/ssh/sshd_config` для включения входа в систему `root`: 
+**1. Относительно директив безопасности SSH:**  
+* Какая директива используется в `/etc/ssh/sshd_config` для включения `root` входа в систему: 
+`PermitRootLogin`
 * Какую директиву вы бы использовали в `/etc/ssh/sshd_config`, чтобы указать только локальную учетную запись для приема SSH-соединений: 
+`AllowUsers`
 
-2. При использовании одного и того же пользователя как на клиенте, так и на сервере, какую команду `ssh` вы можете использовать для передачи открытого ключа клиента на сервер, чтобы вы могли войти в систему с помощью аутентификации с открытым ключом? 
+**2. При использовании одного и того же пользователя как на клиенте, так и на сервере, какую команду `ssh` вы можете использовать для передачи открытого ключа клиента на сервер, чтобы вы могли войти в систему с помощью аутентификации с открытым ключом?**  
+```console
+ssh-copy-id
+```
 
-3. Создайте два туннеля локальных портов с помощью одной команды, перенаправляя локальные непривилегированные порты `8080` и `8585` через `halof` удаленного сервера на веб-сайты `www.gnu.org` и `www.melpa.org` соответственно. Используйте пользователя `ina` на удаленном сервере и не забудьте использовать ключи `-Nf`:
+**3. Создайте два туннеля локальных портов с помощью одной команды, перенаправляя локальные непривилегированные порты `8080` и `8585` через `halof` удаленного сервера на веб-сайты `www.gnu.org` и `www.melpa.org` соответственно. Используйте пользователя `ina` на удаленном сервере и не забудьте использовать ключи `-Nf`:**
+```console
+ssh -L 8080:www.gnu.org:80 -L 8585:www.melpa.org:80 -Nf ina@halof
+```
