Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -10,4 +10,124 @@
 
 ## Введение
 
-В предыдущем уроке мы узнали, как использовать OpenSSH для шифрования сеансов удаленного входа в систему, а также любого другого последующего обмена информацией. Могут быть и другие сценарии, в которых вы можете захотеть зашифровать файлы или электронную почту, чтобы они благополучно достигли своего получателя и были свободны от посторонних глаз. Вам также может потребоваться поставить цифровую подпись для этих файлов или сообщений, чтобы предотвратить их подделку. Отличным инструментом для таких целей является GNU Privacy Guard (он же GnuPG или просто GPG), который представляет собой бесплатную реализацию с открытым исходным кодом проприетарной программы Pretty Good Privacy (PGP). GPG использует стандарт OpenPGP, как это определено рабочей группой OpenPGP Инженерной группы Интернета (IETF) в RFC 4880. В этом уроке мы рассмотрим основы GNU Privacy Guard.
+В предыдущем уроке мы узнали, как использовать *OpenSSH* для шифрования сеансов удаленного входа в систему, а также любого другого последующего обмена информацией. Могут быть и другие сценарии, в которых вы можете захотеть зашифровать файлы или электронную почту, чтобы они благополучно достигли своего получателя и были свободны от посторонних глаз. Вам также может потребоваться поставить цифровую подпись для этих файлов или сообщений, чтобы предотвратить их подделку. 
+
+Отличным инструментом для таких целей является *GNU Privacy Guard* (он же *GnuPG* или просто *GPG*), который представляет собой бесплатную реализацию с открытым исходным кодом проприетарной программы *Pretty Good Privacy (PGP)*. *GPG* использует стандарт *OpenPGP*, как это определено *рабочей группой OpenPGP Инженерной группы Интернета (IETF)* в RFC 4880. В этом уроке мы рассмотрим основы *GNU Privacy Guard*.
+
+
+## Выполнение базовой настройки, использования и отзыва GnuPG
+
+Как и в случае с SSH, в основе GPG лежит механизм *асимметричной криптографии* или криптографии с *открытым ключом*. Пользователь генерирует пару ключей, состоящую из закрытого и открытого ключей. Ключи математически связаны таким образом, что то, что зашифровано одним, может быть дешифровано только другим. Для успешного обмена данными пользователь должен отправить свой открытый ключ предполагаемому получателю.
+
+
+## Конфигурация и использование GnuPG
+
+Команда для работы с GPG - `gpg`. Вы можете передать ему несколько вариантов для выполнения разных задач. Давайте начнем с создания пары ключей в качестве пользователя `caro`l. Для этого вы воспользуетесь командой `gpg --gen-key`:
+
+```console
+carol@debian:~$ gpg --gen-key
+gpg (GnuPG) 2.2.12; Copyright (C) 2018 Free Software Foundation, Inc.
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
+
+gpg: directory '/home/carol/.gnupg' created
+gpg: keybox '/home/carol/.gnupg/pubring.kbx' created
+Note: Use "gpg --full-generate-key" for a full featured key generation dialog.
+
+GnuPG needs to construct a user ID to identify your key.
+
+Real name:
+
+(...)
+```
+
+Сообщив вам, помимо прочего, что каталог конфигурации `~/.gnupg` и ваша связка открытых ключей `~/.gnugpg/pubring.kbx` были созданы, `gpg` просит вас указать ваше настоящее имя и адрес электронной почты:
+
+```console
+(...)
+Real name: carol
+Email address: carol@debian
+You selected this USER-ID:
+    "carol <carol@debian>"
+
+Change (N)ame, (E)mail, or (O)kay/(Q)uit?
+```
+
+Если вы согласны с полученным `USER-ID` и нажмете <kbd>O</kbd>, вам будет предложено ввести кодовую фразу (рекомендуется, чтобы она была достаточно сложной):
+
+```console
+┌──────────────────────────────────────────────────────┐
+│ Please enter the passphrase to                       │
+│ protect your new key                                 │
+│                                                      │
+│ Passphrase:  │
+
+(...)
+```
+
+Некоторые заключительные сообщения будут отображаться, рассказывая вам о создании других файлов, а также о самих ключах, а затем вы закончите процесс генерации ключей:
+
+```console
+(...)
+We need to generate a lot of random bytes. It is a good idea to perform
+some other action (type on the keyboard, move the mouse, utilize the
+disks) during the prime generation; this gives the random number
+generator a better chance to gain enough entropy.
+gpg: /home/carol/.gnupg/trustdb.gpg: trustdb created
+gpg: key 19BBEFD16813034E marked as ultimately trusted
+gpg: directory '/home/carol/.gnupg/openpgp-revocs.d' created
+gpg: revocation certificate stored as '/home/carol/.gnupg/openpgp-revocs.d/D18FA0021F644CDAF57FD0F919BBEFD16813034E.rev'
+public and secret key created and signed.
+
+pub   rsa3072 2020-07-03 [SC] [expires: 2022-07-03]
+      D18FA0021F644CDAF57FD0F919BBEFD16813034E
+uid                      carol <carol@debian>
+sub   rsa3072 2020-07-03 [E] [expires: 2022-07-03]
+```
+
+Теперь вы можете увидеть, что находится внутри каталога `~/.gnupg` (каталог конфигурации GPG):
+
+```console
+carol@debian:~/.gnupg$ ls -l
+total 16
+drwx------ 2 carol carol 4096 Jul  3 23:34 openpgp-revocs.d
+drwx------ 2 carol carol 4096 Jul  3 23:34 private-keys-v1.d
+-rw-r--r-- 1 carol carol 1962 Jul  3 23:34 pubring.kbx
+-rw------- 1 carol carol 1240 Jul  3 23:34 trustdb.gpg
+```
+
+Давайте объясним использование каждого файла: 
+
+`opengp-revocs.d`  
+Здесь хранится сертификат отзыва, созданный вместе с парой ключей. Разрешения для этого каталога весьма ограничены, так как любой, у кого есть доступ к сертификату, может отозвать ключ (подробнее об отзыве ключа в следующем подразделе). 
+
+`private-keys-v1.d`  
+Это каталог, в котором хранятся ваши личные ключи, поэтому разрешения ограничены. 
+
+`pubring.kbx`  
+Это ваша связка открытых ключей. В нем хранятся ваши собственные, а также любые другие импортированные открытые ключи. 
+
+`trustdb.gpg`  
+База данных доверия. Это связано с концепцией *Web of Trust* (которая выходит за рамки этого урока).
+
+>С появлением *GnuPG 2.1* были внесены некоторые существенные изменения, такие как исчезновение файлов `secring.gpg` и `pubring.gpg` в пользу `private-keys-v1.d` и `pubring.kbx` соответственно.
+
+После создания пары ключей вы можете просмотреть свои открытые ключи с помощью команды `gpg --list-keys`, которая отобразит содержимое вашей связки открытых ключей:
+
+```console
+carol@debian:~/.gnupg$ gpg --list-keys
+/home/carol/.gnupg/pubring.kbx
+------------------------------
+pub   rsa3072 2020-07-03 [SC] [expires: 2022-07-03]
+      D18FA0021F644CDAF57FD0F919BBEFD16813034E
+uid           [ultimate] carol <carol@debian>
+sub   rsa3072 2020-07-03 [E] [expires: 2022-07-03]
+```
+
+Шестнадцатеричная строка `D18FA0021F644CDAF57FD0F919BBEFD16813034E` - это отпечаток вашего открытого ключа.
+
+>Помимо `USER-ID` (`carol` в примере), есть еще `KEY-ID`. `KEY-ID` состоит из последних 8 шестнадцатеричных цифр в отпечатке вашего открытого ключа (`6813 034E`). Вы можете проверить свой отпечаток ключа с помощью команды `gpg --fingerprint USER-ID`.
+
+
+## Распространение ключей и отзыв
+
