Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -129,5 +129,333 @@ sub   rsa3072 2020-07-03 [E] [expires: 2022-07-03]
 >Помимо `USER-ID` (`carol` в примере), есть еще `KEY-ID`. `KEY-ID` состоит из последних 8 шестнадцатеричных цифр в отпечатке вашего открытого ключа (`6813 034E`). Вы можете проверить свой отпечаток ключа с помощью команды `gpg --fingerprint USER-ID`.
 
 
-## Распространение ключей и отзыв
+## Распространение и отзыв ключей 
 
+Теперь, когда у вас есть открытый ключ, вы должны сохранить его (т.е. *экспортировать*) в файл, чтобы сделать его доступным для будущих получателей. Затем они смогут использовать его для шифрования файлов или сообщений, предназначенных для вас (поскольку вы единственный, у кого есть закрытый ключ, вы также будете единственным, кто сможет их расшифровать и прочитать). Точно так же ваши получатели также будут использовать его для расшифровки и проверки ваших зашифрованных или подписанных сообщений/файлов. Используйте команду `gpg --export`, за которой следует `USER-ID` и перенаправление на имя выходного файла по вашему выбору:
+
+```console
+carol@debian:~/.gnupg$ gpg --export carol > carol.pub.key
+carol@debian:~/.gnupg$ ls
+carol.pub.key  openpgp-revocs.d  private-keys-v1.d  pubring.kbx  trustdb.gpg
+```
+
+>Передача параметра `-a` или `--armor` в `gpg --export` (например: `gpg --export --armor carol > carol.pub.key`) создаст бронированный вывод ASCII (вместо двоичного формата OpenPGP по умолчанию), который можно безопасно отправлено по электронной почте.
+
+Как уже отмечалось, теперь вы должны отправить свой файл открытого ключа (`carol.pub.key`) получателю, с которым вы хотите обменяться информацией. Например, давайте отправим файл открытого ключа в `ina` на удаленном сервере `halof` с помощью `scp` (*защищенная копия*):
+
+```console
+carol@debian:~/.gnupg$ scp carol.pub.key ina@halof:/home/ina/
+Enter passphrase for key '/home/carol/.ssh/id_ecdsa':
+carol.pub.key                                                                                         100% 1740   775.8KB/s   00:00
+carol@debian:~/.gnupg$
+```
+
+`ina` теперь принадлежит `carol.pub.key`. Она будет использовать его, чтобы зашифровать файл и отправить его `carol` в следующем разделе.
+
+>Другой способ распространения открытого ключа - использование серверов ключей: вы загружаете свой открытый ключ на сервер с помощью команды `gpg --keyserver keyserver-name --send-keys KEY-ID`, и другие пользователи получат (то есть *импортируют*) их. с помощью `gpg --keyserver keyserver-name --recv-keys KEY-ID`.
+
+Давайте закроем этот раздел, обсудив отзыв ключа. Отзыв ключа следует использовать, когда ваши личные ключи были скомпрометированы или изъяты из обращения. Первый шаг - создать сертификат отзыва, передав `gpg` параметр `--gen-revoke`, за которым следует `USER-ID`. Перед параметром `--gen-revoke` можно указать параметр `--output`, за которым следует спецификация имени файла назначения, чтобы сохранить полученный сертификат в файл (вместо того, чтобы выводить его на экран терминала). Выходные сообщения в процессе отзыва довольно очевидны:
+
+```console
+sonya@debian:~/.gnupg$ gpg --output revocation_file.asc --gen-revoke sonya
+
+sec  rsa3072/0989EB7E7F9F2066 2020-07-03 sonya <sonya@debian>
+
+Create a revocation certificate for this key? (y/N) y
+Please select the reason for the revocation:
+  0 = No reason specified
+  1 = Key has been compromised
+  2 = Key is superseded
+  3 = Key is no longer used
+  Q = Cancel
+(Probably you want to select 1 here)
+Your decision? 1
+Enter an optional description; end it with an empty line:
+> My laptop was stolen.
+>
+Reason for revocation: Key has been compromised
+My laptop was stolen.
+Is this okay? (y/N) y
+ASCII armored output forced.
+Revocation certificate created.
+
+Please move it to a medium which you can hide away; if Mallory gets
+access to this certificate he can use it to make your key unusable.
+It is smart to print this certificate and store it away, just in case
+your media become unreadable.  But have some caution:  The print system of
+your machine might store the data and make it available to others!
+```
+
+Отозванный сертификат сохранен в файле `revocation_file.asc` (`asc` для формата ASCII):
+
+```console
+sonya@debian:~/.gnupg$ ls
+openpgp-revocs.d  private-keys-v1.d  pubring.kbx  revocation_file.asc  trustdb.gpg
+sonya@debian:~/.gnupg$ cat revocation_file.asc
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Comment: This is a revocation certificate
+
+iQHDBCABCgAtFiEEiIVjfDnnpieFi0wvnlcN6yLCeHEFAl8ASx4PHQJzdG9sZW4g
+bGFwdG9wAAoJEJ5XDesiwnhxT9YMAKkjQiMpo9Uyiy9hyvukPPSrLcmtAGLk4pKS
+pLZfzA5kxa+HPQwBglAEvfNRR6VMxqXUgUGYC/IAyQQM62oNAcY2PCPrxyJNgVF7
+8l4mMZKvW++5ikjZwyg6WWV0+w6oroeo9qruJFjcu752p4T+9gsHVa2r+KRqcPQe
+aZ65sAvsBJlcsUDZqfWUXg2kQp9mNPCdQuqvDaKRgNCHA1zbzNFzXWVd2X5RgFo5
+nY+tUP8ZQA9DTQPBLPcggICmfLopMPZYB2bft5geb2mMi2oNpf9CNPdQkdccimNV
+aRjqdUP9C89PwTafBQkQiONlsR/dWTFcqprG5KOWQPA7xjeMV8wretdEgsyTxqHp
+v1iRzwjshiJCKBXXvz7wSmQrJ4OfiMDHeS4ipR0AYdO8QCzmOzmcFQKikGSHGMy1
+z/YRlttd6NZIKjf1TD0nTrFnRvPdsZOlKYSArbfqNrHRBQkgirOD4JPI1tYKTffq
+iOeZFx25K+fj2+0AJjvrbe4HDo5m+Q==
+=umI8
+-----END PGP PUBLIC KEY BLOCK-----
+```
+
+Чтобы эффективно отозвать свой закрытый ключ, теперь вам нужно объединить сертификат с ключом, что выполняется путем импорта файла сертификата отзыва в свою связку ключей:
+
+```console
+sonya@debian:~/.gnupg$ gpg --import revocation_file.asc
+gpg: key 9E570DEB22C27871: "sonya <sonya@debian>" revocation certificate imported
+gpg: Total number processed: 1
+gpg:    new key revocations: 1
+gpg: marginals needed: 3  completes needed: 1  trust model: pgp
+gpg: depth: 0  valid:   1  signed:   0  trust: 0-, 0q, 0n, 0m, 0f, 1u
+gpg: next trustdb check due at 2022-07-04
+```
+
+Перечислите свои ключи сейчас, и вы будете проинформированы об отозванном ключе:
+
+```console
+sonya@debian:~/.gnupg$ gpg --list-keys
+/home/sonya/.gnupg/pubring.kbx
+pub   rsa3072 2020-07-04 [SC] [revoked: 2020-07-04]
+      8885637C39E7A627858B4C2F9E570DEB22C27871
+uid           [ revoked] sonya <sonya@debian>
+```
+
+И последнее, но не менее важное: убедитесь, что вы сделали отозванный ключ доступным для любой стороны, у которой есть связанные с ним открытые ключи (включая серверы ключей).
+
+
+## Использование GPG для шифрования, дешифрования, подписи и проверки файлов
+
+В предыдущем разделе Кэрол отправила свой открытый ключ `ina`. Мы будем использовать его сейчас, чтобы обсудить, как GPG может шифровать, расшифровывать, подписывать и проверять файлы.
+
+
+### Шифрование и дешифрование файлов
+
+Во-первых, `ina` должна импортировать открытый ключ Кэрол (`carol.pub.key`) в ее связку ключей, чтобы она могла начать с ним работать:
+
+```console
+ina@halof:~> gpg --import carol.pub.key
+gpg: /home/ina/.gnupg/trustdb.gpg: trustdb created
+gpg: key 19BBEFD16813034E: public key "carol <carol@debian>" imported
+gpg: Total number processed: 1
+gpg:               imported: 1
+ina@halof:~> gpg --list-keys
+/home/ina/.gnupg/pubring.kbx
+----------------------------
+pub   rsa3072 2020-07-03 [SC] [expires: 2022-07-03]
+      D18FA0021F644CDAF57FD0F919BBEFD16813034E
+uid           [ unknown] carol <carol@debian>
+sub   rsa3072 2020-07-03 [E] [expires: 2022-07-03]
+```
+
+Затем создайте файл, записав в него какой-то текст, а затем зашифруйте его с помощью `gpg` (поскольку вы не подписали ключ `carol`, вас явно спросят, хотите ли вы использовать этот ключ):
+
+```console
+ina@halof:~> echo "This is the message ..." > unencrypted-message
+ina@halof:~> gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message
+gpg: 0227347CC92A5CB1: There is no assurance this key belongs to the named user
+sub  rsa3072/0227347CC92A5CB1 2020-07-03 carol <carol@debian>
+ Primary key fingerprint: D18F A002 1F64 4CDA F57F  D0F9 19BB EFD1 6813 034E
+      Subkey fingerprint: 9D89 1BF9 39A4 C130 E44B  1135 0227 347C C92A 5CB1
+
+It is NOT certain that the key belongs to the person named
+in the user ID.  If you really know what you are doing,
+you may answer the next question with yes.
+
+Use this key anyway? (y/N) y
+```
+
+Разберем команду `gpg`: 
+
+`--output encrypted-message`  
+Спецификация имени файла для зашифрованной версии исходного файла (в примере `encrypted-message`). 
+
+`--recipient carol`  
+Спецификация `USER-ID` получателя (в нашем примере - `carol`). Если не указан, GnuPG запросит его (если не указан `--default-recipient`). 
+
+`--armor`  
+Эта опция производит армированный вывод ASCII, который можно скопировать в электронное письмо. 
+
+`--encrypt unencrypted-message`  
+Спецификация имени исходного файла для шифрования. Теперь вы можете отправить зашифрованное сообщение `carol` в Debian с помощью `scp`:
+
+```console
+ina@halof:~> scp encrypted-message carol@debian:/home/carol/
+carol@debian's password:
+encrypted-message                                                             100%  736     1.8MB/s   00:00
+```
+
+Если вы сейчас войдете в систему как `carol` и попытаетесь прочитать зашифрованное сообщение, вы убедитесь, что оно действительно зашифровано и, следовательно, нечитаемо:
+
+```console
+carol@debian:~$ cat encrypted-message
+-----BEGIN PGP MESSAGE-----
+
+hQGMAwInNHzJKlyxAQv/brJ8Ubs/xya35sbv6kdRKm1C7ONLxL3OueWA4mCs0Y/P
+GBna6ZEUCrMEgl/rCyByj3Yq74kuiTmzxAIRUDdvHfj0TtrOWjVAqIn/fPSfMkjk
+dTxKo1i55tLJ+sj17dGMZDcNBinBTP4U1atuN71A5w7vH+XpcesRcFQLKiSOmYTt
+F7SN3/5x5J6io4ISn+b0KbJgiJNNx+Ne/ub4Uzk4NlK7tmBklyC1VRualtxcG7R9
+1klBPYSld6fTdDwT1Y4MofpyILAiGMZvUR1RXauEKf7OIzwC5gWU+UQPSgeCdKQu
+X7QL0ZIBS0Ug2XKrO1k93lmDjf8PWsRIml6n/hNelaOBA3HMP0b6Ozv1gFeEsFvC
+IxhUYPb+rfuNFTMEB7xIO94AAmWB9N4qknMxdDqNE8WhA728Plw6y8L2ngsplY15
+MR4lIFDpljA/CcVh4BXVe9j0TdFWDUkrFMfaIfcPQwKLXEYJp19XYIaaEazkOs5D
+W4pENN0YOcX0KWyAYX6r0l8BF0rq/HMenQwqAVXMG3s8ATuUOeqjBbR1x1qCvRQP
+CR/3V73aQwc2j5ioQmhWYpqxiro0yKX2Ar/E6rZyJtJYrq+CUk8O3JoBaudknNFj
+pwuRwF1amwnSZ/MZ/9kMKQ==
+=g1jw
+-----END PGP MESSAGE-----
+```
+
+Однако, поскольку у вас есть закрытый ключ, вы можете легко расшифровать сообщение, передав `gpg` параметр `--decrypt`, за которым следует путь к зашифрованному файлу (потребуется кодовая фраза закрытого ключа):
+
+```console
+carol@debian:~$ gpg --decrypt encrypted-message
+gpg: encrypted with 3072-bit RSA key, ID 0227347CC92A5CB1, created 2020-07-03
+      "carol <carol@debian>"
+This is the message ...
+```
+
+Вы также можете указать параметр `--output`, чтобы сохранить сообщение в новом незашифрованном файле:
+
+```console
+carol@debian:~$ gpg --output unencrypted-message --decrypt encrypted-message
+gpg: encrypted with 3072-bit RSA key, ID 0227347CC92A5CB1, created 2020-07-03
+      "carol <carol@debian>"
+carol@debian:~$ cat unencrypted-message
+This is the message ...
+```
+
+
+### Подписание и верификация файлов
+
+Помимо шифрования, GPG также можно использовать для подписи файлов. Здесь уместна опция `--sign`. Давайте начнем с создания нового сообщения (сообщения) и подписания его параметром `--sign` (потребуется кодовая фраза вашего закрытого ключа):
+
+```console
+carol@debian:~$ echo "This is the message to sign ..." > message
+carol@debian:~$ gpg --output message.sig --sign message
+(...)
+```
+
+Разбивка команды `gpg`: 
+
+`--output message`  
+Спецификация имени файла подписанной версии исходного файла (в нашем примере `message.sig`). 
+
+`--sign message`  
+Путь к исходному файлу.
+
+>При использовании `--sign` документ сжимается, а затем подписывается. Вывод в двоичном формате.
+
+Затем мы передадим файл `ina` на `halof`, используя `scp message.sig ina @ halof: /home/ina`. Вернувшись к `ina` на `halof`, теперь вы можете проверить его с помощью параметра `--verify`:
+
+```console
+ina@halof:~> gpg --verify message.sig
+gpg: Signature made Sat 04 jul 2020 14:34:41 CEST
+gpg:                using RSA key D18FA0021F644CDAF57FD0F919BBEFD16813034E
+gpg: Good signature from "carol <carol@debian>" [unknown]
+(...)
+```
+
+Если вы также хотите прочитать файл, вам нужно расшифровать его в новый файл (в нашем случае сообщение) с помощью параметра `--output`:
+
+```console
+ina@halof:~> gpg --output message --decrypt message.sig
+gpg: Signature made Sat 04 jul 2020 14:34:41 CEST
+gpg:                using RSA key D18FA0021F644CDAF57FD0F919BBEFD16813034E
+gpg: Good signature from "carol <carol@debian>" [unknown]
+gpg: WARNING: This key is not certified with a trusted signature!
+gpg:          There is no indication that the signature belongs to the owner.
+Primary key fingerprint: D18F A002 1F64 4CDA F57F  D0F9 19BB EFD1 6813 034E
+ina@halof:~> cat message
+This is the message to sign ...
+```
+
+
+#### GPG-Agent
+
+Завершим этот урок, кратко коснувшись `gpg-agent`. `gpg-agent` - это демон, который управляет закрытыми ключами для GPG (запускается `gpg` по запросу). Чтобы просмотреть сводку наиболее полезных опций, запустите `gpg-agent --help` или `gpg-agent -h`:
+
+```console
+carol@debian:~$ gpg-agent --help
+gpg-agent (GnuPG) 2.2.4
+libgcrypt 1.8.1
+Copyright (C) 2017 Free Software Foundation, Inc.
+License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
+
+Syntax: gpg-agent [options] [command [args]]
+Secret key management for GnuPG
+
+Options:
+
+     --daemon                        run in daemon mode (background)
+     --server                        run in server mode (foreground)
+     --supervised                    run in supervised mode
+ -v, --verbose                       verbose
+ -q, --quiet                         be somewhat more quiet
+ -s, --sh                            sh-style command output
+ -c, --csh                           csh-style command output
+(...)
+```
+
+>Для получения дополнительной информации обратитесь к странице руководства `gpg-agent`.
+
+
+## Упражнения для закрепления
+
+1. Заполните таблицу, указав правильное имя файла: 
+
+| Описание | Имя файла |
+|:---------|:----------|
+| Доверенная База данных ||
+| Каталог отозванных сертификатов ||
+| Каталог приватных ключей ||
+| Каталог открытых ключей || 
+
+2. Ответьте на следующие вопросы: 
+* Какой тип криптографии использует *GnuPG*? 
+* Каковы два основных компонента криптографии с открытым ключом? 
+* Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`? 
+* Какой метод используется для распространения открытых ключей на глобальном уровне? 
+
+3. Поместите следующие шаги в правильном порядке относительно отзыва закрытого ключа: 
+* Сделайте отозванный ключ доступным для ваших корреспондентов. 
+* Создайте сертификат отзыва. 
+* Импортируйте сертификат отзыва в свою связку ключей. 
+ 
+Правильный порядок: 
+|Шаг 1:||
+|:--|:--|
+|Шаг 2:|| 
+|Шаг 3:|| 
+
+4. Что касается шифрования файлов, что означает параметр `--armor` в команде `gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message`?
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+
+## Ответы на упражнения для размышления
