Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -445,17 +445,96 @@ Options:
 
 ## Упражнения на размышление
 
+1. У большинства опций `gpg` есть как длинная, так и короткая версия. Заполните таблицу соответствующей короткой версией: 
 
+| Длинная версия | Короткая версия |
+|:---------------|:----------------|
+| `--armor`      |                 |
+| `--output`     |                 | 
+| `--recipient`  |                 | 
+| `--decrypt`    |                 |
+| `--encrypt`    |                 |
+| `--encrypt`    |                 |
+| `--sign`       |                 |
+
+2. Ответьте на следующие вопросы, касающиеся экспорта ключей: 
+* Какую команду вы бы использовали для экспорта всех ваших открытых ключей в файл с именем `all.key`? 
+* Какую команду вы бы использовали для экспорта всех ваших закрытых ключей в файл с именем `all_private.key`? 
+
+3. Какая опция `gpg` позволяет выполнять большинство задач, связанных с управлением ключами, с помощью меню? 
+4. Какой вариант `gpg` позволяет делать подпись открытым текстом?
 
 
 ## Резюме
 
+В этом уроке рассматривается *GNU Privacy Guard*, отличный выбор для шифрования/дешифрования и цифровой подписи/проверки файлов. Ты выучил: 
 
+* как сгенерировать пару ключей. 
+* как перечислить ключи в связке ключей. 
+* содержимое каталога `~/.gnupg`. 
+* что такое `USER-ID` и `KEY-ID`. 
+* как раздавать открытые ключи своим корреспондентам. 
+* как глобально распространять открытые ключи через серверы ключей. 
+* как отозвать приватные ключи. 
+* как зашифровать и расшифровать файлы. 
+* как подписывать и проверять файлы. 
+* основы *GPG-Agent*. 
+
+В этом уроке обсуждались следующие команды: 
+
+`gpg`  
+Инструмент для шифрования и подписи *OpenPGP*.
 
 
 ## Ответы на упражнения для закрепления
 
+1. Заполните таблицу, указав правильное имя файла: 
 
+| Описание | Имя файла |
+|:---------|:----------|
+| Доверенная База данных ||
+| Каталог отозванных сертификатов ||
+| Каталог приватных ключей ||
+| Каталог открытых ключей || 
+
+2. Ответьте на следующие вопросы: 
+* Какой тип криптографии использует *GnuPG*? 
+* Каковы два основных компонента криптографии с открытым ключом? 
+* Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`? 
+* Какой метод используется для распространения открытых ключей на глобальном уровне? 
+
+3. Поместите следующие шаги в правильном порядке относительно отзыва закрытого ключа: 
+* Сделайте отозванный ключ доступным для ваших корреспондентов. 
+* Создайте сертификат отзыва. 
+* Импортируйте сертификат отзыва в свою связку ключей. 
+ 
+Правильный порядок: 
+|Шаг 1:||
+|:--|:--|
+|Шаг 2:|| 
+|Шаг 3:|| 
+
+4. Что касается шифрования файлов, что означает параметр `--armor` в команде `gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message`?
 
 
 ## Ответы на упражнения для размышления
+
+1. У большинства опций `gpg` есть как длинная, так и короткая версия. Заполните таблицу соответствующей короткой версией: 
+
+| Длинная версия | Короткая версия |
+|:---------------|:----------------|
+| `--armor`      |                 |
+| `--output`     |                 | 
+| `--recipient`  |                 | 
+| `--decrypt`    |                 |
+| `--encrypt`    |                 |
+| `--encrypt`    |                 |
+| `--sign`       |                 |
+
+2. Ответьте на следующие вопросы, касающиеся экспорта ключей: 
+* Какую команду вы бы использовали для экспорта всех ваших открытых ключей в файл с именем `all.key`? 
+* Какую команду вы бы использовали для экспорта всех ваших закрытых ключей в файл с именем `all_private.key`? 
+
+3. Какая опция `gpg` позволяет выполнять большинство задач, связанных с управлением ключами, с помощью меню? 
+4. Какой вариант `gpg` позволяет делать подпись открытым текстом?
+
