Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -22,7 +22,7 @@
 
 ## Конфигурация и использование GnuPG
 
-Команда для работы с GPG - `gpg`. Вы можете передать ему несколько вариантов для выполнения разных задач. Давайте начнем с создания пары ключей в качестве пользователя `carol`. Для этого вы воспользуетесь командой `gpg --gen-key`:
+Команда для работы с GPG - `gpg`. Вы можете передать ему несколько вариантов для выполнения разных задач. Давайте начнем с создания пары ключей из под пользователя `carol`. Для этого вы воспользуетесь командой `gpg --gen-key`:
 
 ```console
 carol@debian:~$ gpg --gen-key
