Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -124,7 +124,7 @@ uid           [ultimate] carol <carol@debian>
 sub   rsa3072 2020-07-03 [E] [expires: 2022-07-03]
 ```
 
-Шестнадцатеричная строка `D18FA0021F644CDAF57FD0F919BBEFD16813034E` - это отпечаток вашего открытого ключа.
+Шестнадцатеричная строка `D18FA0021F644CDAF57FD0F919BBEFD16813034E` - это ваш *отпечаток открытого ключа*.
 
 >Помимо `USER-ID` (`carol` в примере), есть еще `KEY-ID`. `KEY-ID` состоит из последних 8 шестнадцатеричных цифр в отпечатке вашего открытого ключа (`6813 034E`). Вы можете проверить свой отпечаток ключа с помощью команды `gpg --fingerprint USER-ID`.
 
