Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -1,4 +1,4 @@
-# 110.3 Урок 1
+# 110.3 Урок 2
 
 | **Сертификат:** | LPIC-1                                      |
 |:----------------|:--------------------------------------------|
@@ -139,9 +139,9 @@ carol@debian:~/.gnupg$ ls
 carol.pub.key  openpgp-revocs.d  private-keys-v1.d  pubring.kbx  trustdb.gpg
 ```
 
->Передача параметра `-a` или `--armor` в `gpg --export` (например: `gpg --export --armor carol > carol.pub.key`) создаст бронированный вывод ASCII (вместо двоичного формата OpenPGP по умолчанию), который можно безопасно отправлено по электронной почте.
+>Передача параметра `-a` или `--armor` в `gpg --export` (например: `gpg --export --armor carol > carol.pub.key`) создаст ASCII совместимый вывод (вместо двоичного формата OpenPGP по умолчанию), который можно безопасно отправлено по электронной почте.
 
-Как уже отмечалось, теперь вы должны отправить свой файл открытого ключа (`carol.pub.key`) получателю, с которым вы хотите обменяться информацией. Например, давайте отправим файл открытого ключа в `ina` на удаленном сервере `halof` с помощью `scp` (*защищенная копия*):
+Как уже отмечалось, теперь вы должны отправить свой файл открытого ключа (`carol.pub.key`) получателю, с которым вы хотите обменяться информацией. Например, давайте отправим файл открытого ключа `ina` на удаленном сервере `halof` с помощью `scp` (*защищенная копия*):
 
 ```console
 carol@debian:~/.gnupg$ scp carol.pub.key ina@halof:/home/ina/
@@ -152,7 +152,7 @@ carol@debian:~/.gnupg$
 
 `ina` теперь принадлежит `carol.pub.key`. Она будет использовать его, чтобы зашифровать файл и отправить его `carol` в следующем разделе.
 
->Другой способ распространения открытого ключа - использование серверов ключей: вы загружаете свой открытый ключ на сервер с помощью команды `gpg --keyserver keyserver-name --send-keys KEY-ID`, и другие пользователи получат (то есть *импортируют*) их. с помощью `gpg --keyserver keyserver-name --recv-keys KEY-ID`.
+>Другой способ распространения открытого ключа - использование *серверов ключей*: вы загружаете свой открытый ключ на сервер с помощью команды `gpg --keyserver keyserver-name --send-keys KEY-ID`, и другие пользователи получат (то есть *импортируют*) их. с помощью `gpg --keyserver keyserver-name --recv-keys KEY-ID`.
 
 Давайте закроем этот раздел, обсудив отзыв ключа. Отзыв ключа следует использовать, когда ваши личные ключи были скомпрометированы или изъяты из обращения. Первый шаг - создать сертификат отзыва, передав `gpg` параметр `--gen-revoke`, за которым следует `USER-ID`. Перед параметром `--gen-revoke` можно указать параметр `--output`, за которым следует спецификация имени файла назначения, чтобы сохранить полученный сертификат в файл (вместо того, чтобы выводить его на экран терминала). Выходные сообщения в процессе отзыва довольно очевидны:
 
@@ -236,7 +236,7 @@ uid           [ revoked] sonya <sonya@debian>
 
 ## Использование GPG для шифрования, дешифрования, подписи и проверки файлов
 
-В предыдущем разделе Кэрол отправила свой открытый ключ `ina`. Мы будем использовать его сейчас, чтобы обсудить, как GPG может шифровать, расшифровывать, подписывать и проверять файлы.
+В предыдущем разделе `carol` отправила свой открытый ключ `ina`. Мы будем использовать его сейчас, чтобы обсудить, как GPG может шифровать, расшифровывать, подписывать и проверять файлы.
 
 
 ### Шифрование и дешифрование файлов
